--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-09 09:02+0100\n"
-"PO-Revision-Date: 2014-01-08 16:44+0000\n"
+"PO-Revision-Date: 2014-01-09 16:21+0000\n"
 "Last-Translator: Dar_Kuntu <ZAck13@gmx.at>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1389199468.0\n"
+"X-POOTLE-MTIME: 1389284515.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -752,18 +752,15 @@ msgid "_Cancel"
 msgstr "_Abbrechen"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "C_opy Here"
-msgstr "K_opieren"
+msgstr "Kopiraj _sem"
 
 #: ../src/gtk/fm-dnd-dest.c:414
-#, fuzzy
 msgid "_Move Here"
-msgstr "Nach _links bewegen"
+msgstr "Premakni s_em"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:416
-#, fuzzy
 msgid "_Link Here"
 msgstr "_Verknüpfen"
 
@@ -780,13 +777,12 @@ msgid "Open _With..."
 msgstr "Öffnen _mit…"
 
 #: ../src/gtk/fm-file-menu.c:153
-#, fuzzy
 msgid "Open _With"
-msgstr "Öffnen _mit…"
+msgstr "Öffnen _mit"
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
-msgstr ""
+msgstr "Copiar ru_ta(s)"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "H_ide"
@@ -802,7 +798,7 @@ msgstr "_Zu Lesezeichen hinzufügen"
 
 #: ../src/gtk/fm-file-menu.c:162
 msgid "_Rename..."
-msgstr ""
+msgstr "_Renombrar…"
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -822,13 +818,12 @@ msgstr "_Dateieigenschaften"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:265 ../src/gtk/fm-file-menu.c:525
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "Nach _rechts bewegen"
+msgstr "Premakni v _smeti"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr ""
+msgstr "Esta carpeta ya está incluida en los marcadores."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -843,7 +838,7 @@ msgstr[1] "Bytes"
 #: ../src/gtk/fm-file-properties.c:510
 #, c-format
 msgid "scanning... %d"
-msgstr ""
+msgstr "explorando… %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
@@ -881,7 +876,7 @@ msgstr ""
 
 #: ../src/gtk/fm-file-properties.c:1026
 msgid "scanning..."
-msgstr ""
+msgstr "explorando…"
 
 #: ../src/gtk/fm-file-properties.c:1088
 msgid "<b>_Access content:</b>"
@@ -1109,9 +1104,8 @@ msgid "Folder location bar"
 msgstr "Adressleiste"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "Ordne_r umbenennen"
+msgstr "Domača mapa"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1123,9 +1117,8 @@ msgid "Applications"
 msgstr "Anwendungen"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Dateisystem"
+msgstr "Koren datotečnega sistema"
 
 #: ../src/gtk/fm-places-view.c:131
 msgid "_Mount Volume"
@@ -1148,9 +1141,8 @@ msgid "_Rename Bookmark Item"
 msgstr "_Lesezeichen umbenennen"
 
 #: ../src/gtk/fm-places-view.c:151
-#, fuzzy
 msgid "Re_move from Bookmarks"
-msgstr "_Lesezeichen entfernen"
+msgstr "Lesezeichen _entfernen"
 
 #: ../src/gtk/fm-places-view.c:152
 msgid "Move Bookmark _Up"
@@ -1204,7 +1196,7 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:326
 msgid "<b>Errors occured before file operation was stopped.</b>"
-msgstr ""
+msgstr "<b>Se produjeron errores antes de detener la operación.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
@@ -1212,7 +1204,7 @@ msgstr "Abgebrochen"
 
 #: ../src/gtk/fm-progress-dlg.c:332
 msgid "<b>The file operation was completed with errors.</b>"
-msgstr ""
+msgstr "<b>Se completó la operación con errores.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:334
 msgid "Finished"
@@ -1243,22 +1235,22 @@ msgstr ","
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:579
 msgid "Moving"
-msgstr ""
+msgstr "Moviendo"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:583
 msgid "Copying"
-msgstr ""
+msgstr "Copiando"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:587
 msgid "Trashing"
-msgstr ""
+msgstr "Moviendo a la papelera"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:591
 msgid "Deleting"
-msgstr ""
+msgstr "Eliminando"
 
 #. translators: it is part of "Symlinking files:" or "Symlinking xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:595
@@ -1283,19 +1275,19 @@ msgstr "%s Dateien"
 
 #: ../src/gtk/fm-progress-dlg.c:615
 msgid "<b>File operation is in progress...</b>"
-msgstr ""
+msgstr "<b>Operación en progreso…</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
 #: ../src/gtk/fm-progress-dlg.c:619
 #, c-format
 msgid "<b>%s file:</b>"
-msgstr ""
+msgstr "<b>%s el archivo:</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:622
 #, c-format
 msgid "<b>%s files:</b>"
-msgstr ""
+msgstr "<b>%s los archivos:</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1331,14 +1323,12 @@ msgid "_Hide %s"
 msgstr "%1 _verstecken"
 
 #: ../src/gtk/fm-standard-view.c:839
-#, fuzzy
 msgid "_Move Left"
-msgstr "Nach _links bewegen"
+msgstr "Premakni _levo"
 
 #: ../src/gtk/fm-standard-view.c:845
-#, fuzzy
 msgid "Move _Right"
-msgstr "Nach _rechts bewegen"
+msgstr "Premakni _desno"
 
 #: ../src/gtk/fm-standard-view.c:868
 #, c-format
@@ -1346,9 +1336,8 @@ msgid "Show %s"
 msgstr "%s anzeigen"
 
 #: ../src/gtk/fm-standard-view.c:880
-#, fuzzy
 msgid "_Forget Width"
-msgstr "Breite _vergessen"
+msgstr "Pozabi _širino"
 
 #: ../src/gtk/fm-standard-view.c:1854
 msgid "_Icon View"
@@ -1529,14 +1518,12 @@ msgid "Search"
 msgstr "Suchen"
 
 #: ../src/modules/vfs-search.c:1052
-#, fuzzy
 msgid "Search Results"
-msgstr "Suchergebnisse"
+msgstr "Rezultati iskanja"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
-msgstr "Ausführbare Datei wählen"
+msgstr "Izberite izvedljivo datoteko"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:72
 msgid "Executable files"
@@ -1581,7 +1568,6 @@ msgid "_Use startup notification"
 msgstr "Vis_uelle Rückmeldung über Programmstart geben"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
 msgstr "_Desktop-Datei"
 
