--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-09 09:02+0100\n"
-"PO-Revision-Date: 2013-09-24 15:44+0000\n"
+"PO-Revision-Date: 2014-01-09 20:35+0000\n"
 "Last-Translator: vgezer <volkangezer@gmail.com>\n"
 "Language-Team: tr <tr@li.org>\n"
 "Language: tr\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1380037440.0\n"
+"X-POOTLE-MTIME: 1389299726.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -26,6 +26,8 @@ msgstr "Tercih Edilen Uygulamalar"
 #: ../data/libfm-pref-apps.desktop.in.h:2
 msgid "Select applications called on click on Web link or e-mail address"
 msgstr ""
+"Web bağlantısı veya e-posta adresine tıklanıldığında çağrılacak uygulamaları "
+"seçin"
 
 #: ../data/lxshortcut.desktop.in.h:1
 msgid "Shortcut Editor"
@@ -36,16 +38,14 @@ msgid "Create new or change existing desktop entry"
 msgstr "Yeni bir masaüstü girdisi oluştur veya mevcutu değiştir"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "Choose Application"
-msgstr "Bir Uygulama Seç"
+msgstr "Uygulamayı Seç"
 
 #: ../data/ui/app-chooser.glade.h:2
 msgid "Use selected application to open files"
 msgstr "Dosyaları seçilen uygulamayla aç"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Applications"
 msgstr "_Kurulu Uygulama"
 
@@ -98,14 +98,12 @@ msgid "C_ustom Command Line"
 msgstr "_Özel Komut Satırı"
 
 #: ../data/ui/app-chooser.glade.h:17
-#, fuzzy
 msgid "_Set selected application as default action for this file type"
 msgstr "_Seçili uygulamayı bu dosya türü için varsayılan olarak ayarla"
 
 #: ../data/ui/ask-rename.glade.h:1
-#, fuzzy
 msgid "Confirm File Replacing"
-msgstr "Dosyayı değiştirmeyi onayla"
+msgstr "Dosyayı Değiştirmeyi Onayla"
 
 #: ../data/ui/ask-rename.glade.h:2
 msgid "_Skip"
@@ -134,9 +132,8 @@ msgid "with the following file?"
 msgstr "şu dosyayla?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File name:"
-msgstr "Dosya _Adı:"
+msgstr "_Dosya adı:"
 
 #: ../data/ui/ask-rename.glade.h:10
 msgid "_Apply this option to all existing files"
@@ -189,9 +186,8 @@ msgid "<b>Target file:</b>"
 msgstr "<b>Hedef dosya:</b>"
 
 #: ../data/ui/file-prop.glade.h:6
-#, fuzzy
 msgid "<b>File type:</b>"
-msgstr "<b>Dosya Türü:</b>"
+msgstr "<b>Dosya türü:</b>"
 
 #: ../data/ui/file-prop.glade.h:7
 msgid "<b>Open _with:</b>"
@@ -202,34 +198,28 @@ msgid "Select the application used to open files of this type "
 msgstr "Bu dosya türünü açmak için uygulama seç "
 
 #: ../data/ui/file-prop.glade.h:9
-#, fuzzy
 msgid "<b>Total count of files:</b>"
-msgstr "<b>Dosyaların Toplam Boyutu:</b>"
+msgstr "<b>Toplam dosya sayısı:</b>"
 
 #: ../data/ui/file-prop.glade.h:10
-#, fuzzy
 msgid "<b>Total size of files:</b>"
-msgstr "<b>Dosyaların Toplam Boyutu:</b>"
+msgstr "<b>Dosyaların toplam boyutu:</b>"
 
 #: ../data/ui/file-prop.glade.h:11
-#, fuzzy
 msgid "<b>Size on disk:</b>"
-msgstr "<b>Diskteki Boyutu:</b>"
+msgstr "<b>Diskteki boyutu:</b>"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>Last modification:</b>"
-msgstr "<b>Son Değişiklik:</b>"
+msgstr "<b>Son değişiklik:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>Last access:</b>"
-msgstr "<b>Son Erişim:</b>"
+msgstr "<b>Son erişim:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>Last permissions change:</b>"
-msgstr "<b>Son İzin Değişikliği:</b>"
+msgstr "<b>Son izin değişikliği:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
 msgid "_General"
@@ -300,7 +290,6 @@ msgid "None"
 msgstr "Hiçbiri"
 
 #: ../data/ui/file-prop.glade.h:32
-#, fuzzy
 msgctxt ""
 "It is a directory access bit - 'sticky' - where only owner can delete a file "
 "from it"
@@ -316,7 +305,6 @@ msgid "Sticky & set GID"
 msgstr "Sticky & set GID"
 
 #: ../data/ui/file-prop.glade.h:35
-#, fuzzy
 msgctxt "this is a file access mode bit, also known as 'suid'"
 msgid "Set UID"
 msgstr "Set UID"
@@ -326,7 +314,6 @@ msgid "Set UID & GID"
 msgstr "Set UID & GID"
 
 #: ../data/ui/file-prop.glade.h:37
-#, fuzzy
 msgctxt ""
 "this is a file access mode - only owner can access the file, for others "
 "access is denied"
@@ -362,9 +349,8 @@ msgid "GB"
 msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
-#, fuzzy
 msgid "Choose Date"
-msgstr "Bir tarih seçin"
+msgstr "Bir Tarih Seçin"
 
 #: ../data/ui/filesearch.glade.h:6
 msgid "Choose a date from the following calendar"
@@ -383,6 +369,8 @@ msgid ""
 "Pattern may be either POSIX shell pattern list (with ',' as separator) or "
 "POSIX regular expression."
 msgstr ""
+"Desen bir POSIX kabuk desen listesi (ayraç olarak ',') veya POSIX düzenli "
+"ifadesi olabilir."
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -437,19 +425,20 @@ msgid "_Documents"
 msgstr "_Belgeler"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "Folde_rs"
-msgstr "Dizin"
+msgstr "Klasör_ler"
 
 #: ../data/ui/filesearch.glade.h:24
 msgid "Ot_her:"
-msgstr ""
+msgstr "_Diğer:"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid ""
 "Any valid content type can be entered here. Wildcard '*' is allowed at end "
 "of the type. Multiple types should be separated with ';'."
 msgstr ""
+"Buraya geçerli herhangi bir tür girilebilir. Her türün sonunda '*' joker "
+"karakteri kullanılabilir. Birden fazla girdi ';' ile ayrılmalıdır."
 
 #: ../data/ui/filesearch.glade.h:26
 msgid "File _Type"
@@ -505,17 +494,15 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "Tercih edilen Web Tarayıcısı bağlantılara açmak üzere kullanılacak."
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "<b>Mail Client</b>"
-msgstr "<b>Posta sunucusu</b>"
+msgstr "<b>Posta İstemcisi</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-#, fuzzy
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on e-"
 "mail addresses."
 msgstr ""
-"Tercih edilen Posta Sunucusu E-posta adreslerine tıkladığınızda posta "
+"Tercih edilen Posta İstemcisi E-posta adreslerine tıkladığınızda posta "
 "oluşturmak için kullanılacak."
 
 #: ../data/ui/preferred-apps.glade.h:6
@@ -550,9 +537,8 @@ msgid "<b>Time remaining:</b>"
 msgstr "<b>Kalan Süre:</b>"
 
 #: ../data/ui/progress.glade.h:6
-#, fuzzy
 msgid "<b>Errors occurred:</b>"
-msgstr "<b>Bazı hatalar ortaya çıktı:</b>"
+msgstr "<b>Oluşan hatalar:</b>"
 
 #: ../src/base/fm-file-launcher.c:85
 #, c-format
@@ -582,7 +568,7 @@ msgstr "%s MIME türü için öntanımlı bir uygulama ayarlanmadı"
 #: ../src/base/fm-path.c:177 ../src/gtk/fm-places-model.c:829
 #: ../src/gtk/fm-places-model.c:997
 msgid "Devices"
-msgstr ""
+msgstr "Aygıtlar"
 
 #: ../src/base/fm-path.c:183 ../src/gtk/fm-places-model.c:847
 #: ../src/gtk/fm-places-model.c:1012
@@ -737,7 +723,7 @@ msgid "Customize"
 msgstr "Özelleştir"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:266
-#, fuzzy, c-format
+#, c-format
 msgid "<b>Select an application to open \"%s\" files</b>"
 msgstr "Dosyaları seçilen uygulamayla aç"
 
@@ -746,9 +732,8 @@ msgid "Installed Applications"
 msgstr "Kurulu Uygulamalar"
 
 #: ../src/gtk/fm-dir-tree-model.c:420 ../src/gtk/fm-dir-tree-model.c:1211
-#, fuzzy
 msgid "<No subfolders>"
-msgstr "<Alt Dizin Yok>"
+msgstr "<Alt dizin yok>"
 
 #: ../src/gtk/fm-dir-tree-model.c:422 ../src/gtk/fm-dir-tree-model.c:1212
 msgid "Loading..."
@@ -763,20 +748,17 @@ msgid "_Cancel"
 msgstr "_İptal"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "C_opy Here"
-msgstr "K_opyala"
+msgstr "Buraya K_opyala"
 
 #: ../src/gtk/fm-dnd-dest.c:414
-#, fuzzy
 msgid "_Move Here"
-msgstr "_Sola taşı"
+msgstr "_Buraya Taşı"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:416
-#, fuzzy
 msgid "_Link Here"
-msgstr "_Bağlantı"
+msgstr "_Buraya Bağlantı Oluştur"
 
 #: ../src/gtk/fm-dnd-dest.c:870
 msgid "XDirectSave failed."
@@ -791,13 +773,12 @@ msgid "Open _With..."
 msgstr "_Birlikte Aç..."
 
 #: ../src/gtk/fm-file-menu.c:153
-#, fuzzy
 msgid "Open _With"
 msgstr "_Birlikte Aç..."
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
-msgstr ""
+msgstr "Yolları Kopyala"
 
 #: ../src/gtk/fm-file-menu.c:159
 msgid "H_ide"
@@ -812,7 +793,6 @@ msgid "_Add to Bookmarks"
 msgstr "_Yer İmlerine Ekle"
 
 #: ../src/gtk/fm-file-menu.c:162
-#, fuzzy
 msgid "_Rename..."
 msgstr "_Yeniden Adlandır"
 
@@ -834,13 +814,12 @@ msgstr "_Özellikler"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:265 ../src/gtk/fm-file-menu.c:525
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "S_ağa taşı"
+msgstr "Çöpe _Taşı"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr ""
+msgstr "Yer imleriniz zaten bu klasör için bir yer imine sahip."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -854,7 +833,7 @@ msgstr[0] "bayt"
 #: ../src/gtk/fm-file-properties.c:510
 #, c-format
 msgid "scanning... %d"
-msgstr ""
+msgstr "taranıyor... %d"
 
 #: ../src/gtk/fm-file-properties.c:588
 msgid "Please enter a valid user name or numeric id."
@@ -888,9 +867,8 @@ msgstr ""
 "dosyaların görünürlüğünü değiştirmek için <Ctrl+H> tuşlarına basın."
 
 #: ../src/gtk/fm-file-properties.c:1026
-#, fuzzy
 msgid "scanning..."
-msgstr "Yükleniyor..."
+msgstr "taranıyor..."
 
 #: ../src/gtk/fm-file-properties.c:1088
 msgid "<b>_Access content:</b>"
@@ -905,9 +883,8 @@ msgid "<b>File:</b>"
 msgstr "<b>Dosya:</b>"
 
 #: ../src/gtk/fm-file-properties.c:1352
-#, fuzzy
 msgid "Multiple files"
-msgstr "Birden Çok Dosya"
+msgstr "Birden çok dosya"
 
 #. columns visible to the users
 #: ../src/gtk/fm-folder-model.c:190
@@ -940,7 +917,7 @@ msgstr "Konum"
 
 #: ../src/gtk/fm-folder-model.c:197
 msgid "Extension"
-msgstr ""
+msgstr "Uzantı"
 
 #: ../src/gtk/fm-folder-view.c:178
 msgid "Create _New..."
@@ -963,7 +940,6 @@ msgid "_Sort Files"
 msgstr "_Dosyaları Sırala"
 
 #: ../src/gtk/fm-folder-view.c:196
-#, fuzzy
 msgid "_Rename Folder..."
 msgstr "_Klasörü Yeniden Adlandır"
 
@@ -977,14 +953,12 @@ msgstr "Gizlileri _Göster"
 
 #. Note to translators: "Mingle..." means "Do not put folders before files" but make the translation as short as possible, please!
 #: ../src/gtk/fm-folder-view.c:207
-#, fuzzy
 msgid "Mingle _Files and Folders"
-msgstr "Dos_ya ve dizinleri karıştır"
+msgstr "Dos_ya ve Dizinleri Karıştır"
 
 #: ../src/gtk/fm-folder-view.c:208
-#, fuzzy
 msgid "_Ignore Name Case"
-msgstr "_Büyük küçük harfi önemseme"
+msgstr "_Büyük Küçük Harfi Önemseme"
 
 #: ../src/gtk/fm-folder-view.c:219
 msgid "By _Name"
@@ -1007,9 +981,8 @@ msgid "Enter a name for the newly created folder:"
 msgstr "Yeni oluşturulan dizin için bir isim girin:"
 
 #: ../src/gtk/fm-folder-view.c:846
-#, fuzzy
 msgid "Creating New Folder"
-msgstr "Yeni klasör oluşturma"
+msgstr "Yeni Dizin Oluşturuluyor"
 
 #: ../src/gtk/fm-folder-view.c:859
 msgid "Enter a name for empty file:"
@@ -1057,9 +1030,8 @@ msgid "No folders are specified."
 msgstr "Dizin belirtilmedi."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:757 ../src/gtk/fm-gtk-utils.c:554
-#, fuzzy
 msgid "Select Folder"
-msgstr "Bir dizin seçin"
+msgstr "Klasör Seçin"
 
 #: ../src/gtk/fm-gtk-utils.c:70
 msgid "Error"
@@ -1112,19 +1084,16 @@ msgid "Are you sure you want to empty the trash can?"
 msgstr "Çöp kutusunu gerçekten boşaltmak istiyor musunuz?"
 
 #: ../src/gtk/fm-path-entry.c:668
-#, fuzzy
 msgid "Pa_ste and Go"
-msgstr "Ya_pıştır ve git"
+msgstr "Ya_pıştır ve Git"
 
 #: ../src/gtk/fm-path-entry.c:727
-#, fuzzy
 msgid "Folder location bar"
-msgstr "İlişkilendirilmiş Dosya Türleri"
+msgstr "Dizin konum çubuğu"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "_Klasörü Yeniden Adlandır"
+msgstr "Ev Dizini"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1136,9 +1105,8 @@ msgid "Applications"
 msgstr "Uygulamalar"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Dosya sistemi"
+msgstr "Dosya Sistemi Kök Dizini"
 
 #: ../src/gtk/fm-places-view.c:131
 msgid "_Mount Volume"
@@ -1161,9 +1129,8 @@ msgid "_Rename Bookmark Item"
 msgstr "Yer İmini Yeniden Adlandı_r"
 
 #: ../src/gtk/fm-places-view.c:151
-#, fuzzy
 msgid "Re_move from Bookmarks"
-msgstr "Yer İ_mlerinden Çıkar"
+msgstr "Yer İ_mlerinden Kaldır"
 
 #: ../src/gtk/fm-places-view.c:152
 msgid "Move Bookmark _Up"
@@ -1217,16 +1184,15 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:326
 msgid "<b>Errors occured before file operation was stopped.</b>"
-msgstr ""
+msgstr "<b>Dosya işlemi durmadan önce meydana gelen hatalar.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:328
 msgid "Cancelled"
 msgstr "İptal edildi"
 
 #: ../src/gtk/fm-progress-dlg.c:332
-#, fuzzy
 msgid "<b>The file operation was completed with errors.</b>"
-msgstr "Eylem iptal edildi ve bazı hatalar ortaya çıktı."
+msgstr "<b>Dosya işlemi bazı hatalar ile tamamlandı.</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:334
 msgid "Finished"
@@ -1256,66 +1222,60 @@ msgstr ","
 
 #. translators: it is part of "Moving files:" or "Moving xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:579
-#, fuzzy
 msgid "Moving"
-msgstr "Dosyalar taşınıyor"
+msgstr "Taşınıyor"
 
 #. translators: it is part of "Copying files:" or "Copying xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:583
-#, fuzzy
 msgid "Copying"
-msgstr "Dosyalar kopyalanıyor"
+msgstr "Kopyalanıyor"
 
 #. translators: it is part of "Trashing files:" or "Trashing xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:587
-#, fuzzy
 msgid "Trashing"
-msgstr "Dosyalar çöpe taşınıyor"
+msgstr "Çöpe taşınıyor"
 
 #. translators: it is part of "Deleting files:" or "Deleting xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:591
-#, fuzzy
 msgid "Deleting"
-msgstr "Dosyalar siliniyor"
+msgstr "Siliniyor"
 
 #. translators: it is part of "Symlinking files:" or "Symlinking xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:595
 msgid "Symlinking"
-msgstr ""
+msgstr "Sembolik bağlantı oluşturuluyor"
 
 #. translators: it is part of "Changing attributes of files:" or "Changing attributes of xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:602
-#, fuzzy
 msgid "Changing attributes of"
-msgstr "Dosya öznitelikleri değiştiriliyor"
+msgstr "Dosya öznitelikleri değiştiriliyor:"
 
 #. translators: it is part of "Restoring files:" or "Restoring xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:606
-#, fuzzy
 msgid "Restoring"
-msgstr "_Geri al"
+msgstr "Geri yükleniyor"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:613
-#, fuzzy, c-format
+#, c-format
 msgid "%s files"
-msgstr "resim dosyaları"
+msgstr "Dosyalar %s"
 
 #: ../src/gtk/fm-progress-dlg.c:615
 msgid "<b>File operation is in progress...</b>"
-msgstr ""
+msgstr "<b>Dosya işlemi sürüyor...</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
 #: ../src/gtk/fm-progress-dlg.c:619
-#, fuzzy, c-format
+#, c-format
 msgid "<b>%s file:</b>"
-msgstr "<b>Dosya:</b>"
+msgstr "<b>Dosya %s:</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:622
-#, fuzzy, c-format
+#, c-format
 msgid "<b>%s files:</b>"
-msgstr "<b>Dosya:</b>"
+msgstr "<b>Dosyalar %s:</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1351,14 +1311,12 @@ msgid "_Hide %s"
 msgstr "_Gizle %s"
 
 #: ../src/gtk/fm-standard-view.c:839
-#, fuzzy
 msgid "_Move Left"
-msgstr "_Sola taşı"
+msgstr "_Sola Taşı"
 
 #: ../src/gtk/fm-standard-view.c:845
-#, fuzzy
 msgid "Move _Right"
-msgstr "S_ağa taşı"
+msgstr "Sağa _Taşı"
 
 #: ../src/gtk/fm-standard-view.c:868
 #, c-format
@@ -1366,9 +1324,8 @@ msgid "Show %s"
 msgstr "%1 Göster"
 
 #: ../src/gtk/fm-standard-view.c:880
-#, fuzzy
 msgid "_Forget Width"
-msgstr "_Genişliği unut"
+msgstr "_Genişliği Unut"
 
 #: ../src/gtk/fm-standard-view.c:1854
 msgid "_Icon View"
@@ -1549,14 +1506,12 @@ msgid "Search"
 msgstr "Ara"
 
 #: ../src/modules/vfs-search.c:1052
-#, fuzzy
 msgid "Search Results"
-msgstr "Arama sonuçları"
+msgstr "Arama Sonuçları"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
-msgstr "Bir uygulama dosyası seçin"
+msgstr "Çalıştırılabilir Dosyayı Seçin"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:72
 msgid "Executable files"
@@ -1603,9 +1558,8 @@ msgid "_Use startup notification"
 msgstr "_Başlangıç bildirimini kullan"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
-msgstr "_Masaüstü girdisi"
+msgstr "_Masaüstü Girdisi"
 
 #: ../src/modules/gtk-menu-trash.c:72
 msgid "_Restore"
